--- a/index.html
+++ b/index.html
@@ -9,25 +9,25 @@
 </head>
 
 <body>
-    <section class="nav-container">
+    <section class="nav-container borda">
         <figure>
             <img src="https://via.placeholder.com/400x138" />
         </figure>
         <section>
             <h2>Portfólio de artista</h2>
         </section>
-        <nav>
+        <nav class="borda">
             <a>sobre (about)</a>
             <a>publicações (works)</a>
             <a>loja (store)</a>
         </nav>
-
     </section>
-    <main class="gallery">
-        <figure id="img-1">
+
+    <main class="gallery borda">
+        <figure id="img-1" class="borda">
             <img src="https://via.placeholder.com/300x400" />
         </figure>
-        <figure id="img-2">
+        <figure id="img-2" class="borda">
             <img src="https://via.placeholder.com/300x200" />
         </figure>
         <figure id="img-3">
@@ -48,7 +48,7 @@
             <img src="https://via.placeholder.com/300" />
         </figure>
 
-        </figure>
+
     </main>
 </body>
 
